Fixing broken CSS: a) http://dev.gbif.org/issues/browse/POR-529 b) an erroneous reference to a LESS variable that I spotted reported as error on the CSS validator on Firefox

--- a/portal-web/trunk/src/main/webapp/less/admin.less
+++ b/portal-web/trunk/src/main/webapp/less/admin.less
@@ -115,11 +115,11 @@
 
             &:hover {
               color: @cGray1;
-              -webkit-transition: color "" ease-in-out;
-              -moz-transition: color "" ease-in-out;
-              -o-transition: color "", ease-in-out;
-              -ms-transition: color "" ease-in-out;
-              transition: color "" ease-in-out;
+              -webkit-transition: color @hover-speed ease-in-out;
+              -moz-transition: color @hover-speed ease-in-out;
+              -o-transition: color @hover-speed ease-in-out;
+              -ms-transition: color @hover-speed ease-in-out;
+              transition: color @hover-speed ease-in-out;
             }
           }
         }
