--- a/portal-web/trunk/src/main/webapp/less/header.less
+++ b/portal-web/trunk/src/main/webapp/less/header.less
@@ -366,11 +366,11 @@ header {
 
         &:hover {
           color: #333333;
-          -webkit-transition: color "" ease-in-out;
-          -moz-transition:    color "" ease-in-out;
-          -o-transition:      color "" ease-in-out;
-          -ms-transition:     color "" ease-in-out;
-          transition:         color "" ease-in-out;
+          -webkit-transition: color @hover-speed ease-in-out;
+          -moz-transition:    color @hover-speed ease-in-out;
+          -o-transition:      color @hover-speed ease-in-out;
+          -ms-transition:     color @hover-speed ease-in-out;
+          transition:         color @hover-speed ease-in-out;
         }
       }
     }
