--- a/portal-web/trunk/src/main/webapp/less/helpers.less
+++ b/portal-web/trunk/src/main/webapp/less/helpers.less
@@ -39,3 +39,7 @@
   width: @width;
   margin-left: -1*@width / 2;
 }
+
+// transition speed for mouse hovering
+@hover-speed: .3s;
+
